# neat-stuff

./: .gitignore  README.md  agent.py  main.py  population.py  pyproject.toml  test.txt  xor_solver.py
NEAT/: gene.py  genome.py  genome_history.py  main.py  node.py  population.py  population_species.py  species.py  test.py
info/: links.txt
python/: main.py  xor_solver.py
python/NEAT/: gene.py  genome.py  node.py  population_bird.py  population_species.py  population_xor.py
python/astroFighter/: coin.py  config  config-feedforward  game_types.py  globals.py  main.load.py  main.manual.py  main.neat.py  main.official.py  main.py  main.train.neat.py  main.train.py  main.train_species.py  main.visual.neat.py  neat_ref.py  particles.py  renderer.py  rocked.py  rocket.py  spaceship.py  test.py  utils.py
python/bird/: bird.py  bird_no_brain.py  config  controller.py  game_types.py  globals.py  main.bird_no_brain.py  main.py  neat_ref.py  pipe.py  population_bird.py  renderer.py  utils.py
python/debug/: benchmark.py  best_genome_160_gen  best_genome_260_gen  best_genome_slow  debug_genome.py  main.new_node.py  main.py  neat_ref.py  old.py  out  remove.py  test.py  test_in_out.py
python/libs/: utils.py
python/xor/: config-feedforward  config-neaty  main.official.py  main.py  main_population.py  main_species_population.py  neat_ref.py  xor_solver.py
shelf/: config  config.py
treejs_test/: package.json  tsconfig.app.json  tsconfig.node.json
treejs_test/neat/: configNeat.ts  gene.ts  genome.ts  genome_history.ts  node.ts  population.ts  profile  profiler.ts  (+2 more)
(+30 files in other folders)
