[project]
name = "neat-stuff"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colour>=0.1.5",
    "neat-python>=1.1.0",
    "pygame>=2.6.1",
]

[dependency-groups]
dev = ["ruff>=0.14.10"]

[tool.ruff]
lint.extend-select = ["I"]
line-length = 300
lint.ignore = ["F401"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "./python/libs" }

[tool.setuptools.packages.find]
where = ["./python/libs"]

[tool.pyright]
typeCheckingMode = "basic"
